loki/service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  selector:
    name: loki
  type: NodePort
  ports:
    - name: http
      port: 3100
      targetPort: 3100
