loki/ingress-loki.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-loki
  namespace: monitoring
spec:
  rules:
    - host: k8s.loki.local
      http:
        paths:
          - path: /
            backend:
              serviceName: loki
              servicePort: 3100
